<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tv_user"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_background"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:inputType="textPersonName"
            android:minHeight="60dp"
            android:padding="10dp"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tv_email"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_background"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:inputType="textEmailAddress"
            android:minHeight="60dp"
            android:padding="10dp"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tv_password"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_background"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:minHeight="60dp"
            android:padding="10dp"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvRepPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tv_rep_password"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/etRepPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_background"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:minHeight="60dp"
            android:padding="10dp"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_background"
            android:text="@string/btn_sign_in"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tv_account"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>